# playbooks

./: .coveragerc  .env.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  CALL_STACK_RESTORATION_FIX.md  CHANGELOG.md  CHECKPOINT_COUNTER_FIX.md  CHECKPOINT_LOOKUP_BUG_FIX.md  CHECKPOINT_RESUME_DEMO.md  CLAUDE.md  COMPLETE_RESUME_IMPLEMENTATION.md  CONTRIBUTING.md  DESIGN.md  DURABLE_EXECUTION_COMPLETE.md  DURABLE_EXECUTION_OSS_COMPLETE.md  DYNAMIC_AGENT_FIX_COMPLETE.md  ENTER_MESSAGE_LOOP_FIX.md  HOW_TO_USE_RESUME.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LANGFUSE_SPAN_FIX.md  LICENSE  NEXT_STEPS_FOR_YOU.md  PLAN.md  PROGRAM_LEVEL_CHECKPOINTS.md  README.md  READY_TO_TEST_AGAIN.md  READY_TO_USE.md  RESUME_USAGE_GUIDE.md  SESSION_MANAGEMENT_COMPLETE.md  SKIP_BEGIN_ON_RESTORE_FIX.md  STALE_CHECKPOINT_FIX.md  TODO.md  TODOs.md  __init__.py  build_docs.sh  debug_meeting_invitations.py  debug_two_player.py  (+11 more)
.llm_cache/: cache.db  cache.db-shm  cache.db-wal
.llm_cache_test/: cache.db  cache.db-shm  cache.db-wal
.pbasm_cache/: __builtin_playbooks.playbooks-0.6.0.pbasm  react_agent.playbooks-0.6.0.pbasm
api/: index.js  index.mjs  main.py  package.json  requirements.txt
artifacts/: PRD - Meetings.md  agent-threads-PRD.md
design/: ASYNC_IMPROVEMENTS_PRD.md  COMPILER_IMPROVEMENTS_PRD.md  CONFIGURATION_PRD.md  DESCRIPTION_PLACEHOLDERS.md  IMPORT_FEATURE_PRD.md  LLM_CONTEXT_COMPACTION_PRD.md  LOGGING_ARCHITECTURE_PRD.md  PLAYBOOK_EXECUTION.md  UNIFY_PYTHON_EXPRESSION_PROCESSING.md  playbooks-icon.pxd  playbooks-logo-only.pxd  (+1 more)
(+723 files in other folders)
