[tool.poetry]
name = "playbooks"
version = "0.1.0"
description = "A framework for creating AI agents using human-readable playbooks"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "playbooks"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.52.0"
anthropic = "^0.18.1"
google-cloud-aiplatform = "^1.38.1"
typer = ">=0.9.0,<1.0.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.1.7"
pyright = "^1.1.373"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["B006", "B018"]
line-length = 88

[tool.poetry.scripts]
playbooks = "playbooks.cli.cli:main"